<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">SimpleDrawing</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="start_new">New</string>
  <string name="brush">Brush</string>
  <string name="erase">Erase</string>
  <string name="save">Save</string>
  <string name="paint">Paint</string>

  <!--Color Pallete-->
  <string name="start_drawing">Start new drawing</string>
  <string name="view_drawings">View available drawings</string>
  <string name="title_activity_main2">Main2Activity</string>
  <string name="phone_gallery">Phone Gallery</string>
  <string name="camera">Photo Camera</string>
  <string name="stroke_options">Stroke options</string>
  <string name="undo">Undo</string>
  <string name="confirm">Confirm</string>
  <string name="stroke_color_black">Stroke color black</string>
  <string name="stroke_color_white">Stroke color White</string>
  <string name="stroke_color_pink">Stroke color pink</string>
  <string name="stroke_color_blue">Stroke color blue</string>
  <string name="stroke_color_green">Stroke color green</string>
  <string name="stroke_color_yellow">Stroke color yellow</string>
  <string name="stroke_color_orange">Stroke color orange</string>
  <string name="stroke_color_red">Stroke color red</string>
  <string name="clear_all">Clear all changes</string>
  <string name="redo">Re do change</string>
</resources>
