<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
  <android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
      android:id="@+id/contentLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      tools:context=".MainActivity"
      android:orientation="vertical"
      android:background="@color/light_gray">

      <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_drawing"/>

      <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_drawings"/>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
      android:id="@+id/bottom_sheet"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="true"
      android:background="@android:color/white"
      app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">
        <LinearLayout
          android:id="@+id/phoneGallery"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/activity_vertical_margin"
          android:orientation="horizontal">
          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/icon_margin_right"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:src="@drawable/ic_photo_library_black"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_gallery"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/camera"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/activity_vertical_margin"
          android:orientation="horizontal">
          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/icon_margin_right"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:src="@drawable/ic_camera_black"/>

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"/>
        </LinearLayout>
      </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
  </android.support.design.widget.CoordinatorLayout>
</layout>
