<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
  <RelativeLayout
    android:id="@+id/contentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawingActivity">

    <com.bnsantos.drawing.DrawingView
      android:background="@android:color/black"
      android:id="@+id/drawing"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scaleType="fitXY"/>

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:background="@color/transparent_yellow"
      android:minHeight="?attr/actionBarSize"
      android:gravity="center">
      <ImageView
        android:id="@+id/clear"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:padding="@dimen/toolbar_icon_padding"
        android:layout_gravity="center"
        android:src="@drawable/ic_delete_black"
        android:contentDescription="@string/clear_all"/>
      <ImageView
        android:id="@+id/undo"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:padding="@dimen/toolbar_icon_padding"
        android:layout_gravity="center"
        android:src="@drawable/ic_undo_black"
        android:contentDescription="@string/undo"/>
      <ImageView
        android:id="@+id/redo"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:padding="@dimen/toolbar_icon_padding"
        android:layout_gravity="center"
        android:src="@drawable/ic_redo_black"
        android:contentDescription="@string/redo"/>
      <ImageView
        android:id="@+id/confirm"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:padding="@dimen/toolbar_icon_padding"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="right|end"
        android:src="@drawable/ic_check_black"
        android:contentDescription="@string/confirm"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
      android:id="@+id/strokeColors"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_alignLeft="@+id/strokeOptions"
      android:layout_alignStart="@+id/strokeOptions"
      android:visibility="gone"
      android:layout_above="@+id/strokeOptions"/>

    <LinearLayout
      android:id="@+id/strokeWidth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:orientation="horizontal"
      android:layout_alignBottom="@+id/strokeOptions"
      android:layout_toRightOf="@+id/strokeOptions"
      android:layout_toEndOf="@+id/strokeOptions"/>

    <LinearLayout
      android:id="@+id/strokeOptions"
      android:layout_width="@dimen/stroke_opt_size"
      android:layout_height="@dimen/stroke_opt_size"
      android:gravity="center"
      android:layout_marginLeft="7dp"
      android:layout_marginStart="7dp"
      android:layout_marginBottom="12dp"
      android:background="@drawable/stroke_options_bg"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentBottom="true"
      android:contentDescription="@string/stroke_options"
      android:orientation="horizontal"/>

    <LinearLayout
      android:id="@+id/optionsLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_alignLeft="@+id/currentOption"
      android:layout_alignStart="@+id/currentOption"
      android:visibility="gone"
      android:layout_above="@+id/currentOption">
      <ImageView
        android:id="@+id/optionEraser"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/option_margin_bottom"
        android:src="@drawable/ic_broom_white"/>
      <ImageView
        android:id="@+id/optionRectangle"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:layout_marginBottom="@dimen/option_margin_bottom"
        android:src="@drawable/ic_rectangle"/>
      <ImageView
        android:id="@+id/optionCircle"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:layout_marginBottom="@dimen/option_margin_bottom"
        android:src="@drawable/ic_circle"/>
      <ImageView
        android:id="@+id/optionPencil"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/option_margin_bottom"
        android:src="@drawable/ic_pencil"/>
    </LinearLayout>

    <ImageView
      android:id="@+id/currentOption"
      android:layout_width="@dimen/option_size"
      android:layout_height="@dimen/option_size"
      android:layout_marginBottom="9dp"
      android:src="@drawable/ic_pencil"
      android:layout_alignParentBottom="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"/>
  </RelativeLayout>
</layout>